DeveloperOrg/force-app/main/default/objects/lable__c/lable__c.object-meta.xml
<CustomObject>
    <label>lable</label>
    <nameField>
        <label>lable Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>lables</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>