DeveloperOrg/force-app/main/default/objects/lable__c/fields/Eamil__c.field-meta.xml
<CustomField>
    <fullName>Eamil__c</fullName>
    <label>Eamil</label>
    <type>Email</type>
</CustomField>