DeveloperOrg/force-app/main/default/objects/lable__c/fields/location__c.field-meta.xml
<CustomField>
    <fullName>location__c</fullName>
    <label>location</label>
    <scale>2</scale>
    <type>Location</type>
</CustomField>