DeveloperOrg/force-app/main/default/objects/lable__c/recordTypes/record_type_A.recordType-meta.xml
<RecordType>
    <fullName>record_type_A</fullName>
    <active>true</active>
    <label>record type A</label>
</RecordType>