DeveloperOrg/force-app/main/default/objects/lable__c/recordTypes/record_type_B.recordType-meta.xml
<RecordType>
    <fullName>record_type_B</fullName>
    <active>false</active>
    <label>record type B</label>
</RecordType>